[gd_scene load_steps=14 format=3 uid="uid://c1wccewjs5pok"]

[ext_resource type="Script" path="res://scripts/shop_screen_gloot.gd" id="1_adgk6"]
[ext_resource type="Script" path="res://addons/gloot/ui/ctrl_inventory_grid_ex.gd" id="1_ru7hd"]
[ext_resource type="Script" path="res://addons/gloot/core/inventory_grid.gd" id="2_e44r5"]
[ext_resource type="AudioStream" uid="uid://buqj7suo1kr8x" path="res://assets/audio/sfx/buzzer_fadeout_eqd.wav" id="2_mk6pl"]
[ext_resource type="Script" path="res://addons/gloot/ui/ctrl_inventory_grid.gd" id="2_nxhjy"]
[ext_resource type="Resource" uid="uid://d3mo4eqngg0b1" path="res://assets/gloot/backpack_items.tres" id="3_iel5h"]
[ext_resource type="PackedScene" uid="uid://b2bs04605fxq0" path="res://scenes/tooltip.tscn" id="5_dpofu"]
[ext_resource type="PackedScene" uid="uid://cpmhvdq5c7act" path="res://scenes/cost_tooltip.tscn" id="6_fyqho"]

[sub_resource type="Animation" id="Animation_tcne5"]
length = 0.001

[sub_resource type="Animation" id="Animation_e7cjs"]
resource_name = "flash"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.639216, 0, 0.054902, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_imbnn"]
_data = {
"RESET": SubResource("Animation_tcne5"),
"flash": SubResource("Animation_e7cjs")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eg65k"]
bg_color = Color(0.231373, 0.0980392, 0.0235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ao18x"]
bg_color = Color(0.890196, 0.596078, 0.423529, 1)

[node name="ShopScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_adgk6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="CenterContainer2" type="CenterContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="money_label" type="Label" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Cash Money:"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/money_label"]
libraries = {
"": SubResource("AnimationLibrary_imbnn")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer2/money_label"]
stream = ExtResource("2_mk6pl")
bus = &"sfx"

[node name="CenterContainer" type="CenterContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="CenterContainer2" type="CenterContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="InventoryCtrl" type="Control" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(308, 308)
layout_mode = 2
script = ExtResource("1_ru7hd")
field_style = SubResource("StyleBoxFlat_eg65k")
field_highlighted_style = SubResource("StyleBoxFlat_ao18x")
field_dimensions = Vector2(60, 60)
item_spacing = 2
draw_selections = true
inventory_path = NodePath("../../../../../../../InventoryDB")

[node name="CenterContainer" type="CenterContainer" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="ShopCtrl" type="Control" parent="Panel/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(448, 448)
layout_mode = 2
script = ExtResource("2_nxhjy")
field_dimensions = Vector2(64, 64)
grid_color = Color(0.847059, 0.835294, 0.792157, 1)
inventory_path = NodePath("../../../../../../../ShopDB")

[node name="tooltip" parent="." instance=ExtResource("5_dpofu")]
layout_mode = 0

[node name="cost_tooltip" parent="." instance=ExtResource("6_fyqho")]
layout_mode = 0

[node name="InventoryDB" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_e44r5")
size = Vector2i(5, 5)
item_protoset = ExtResource("3_iel5h")

[node name="ShopDB" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_e44r5")
size = Vector2i(7, 7)
item_protoset = ExtResource("3_iel5h")

[connection signal="inventory_item_context_activated" from="Panel/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/CenterContainer2/InventoryCtrl" to="." method="_on_inventory_ctrl_inventory_item_context_activated"]
[connection signal="item_mouse_entered" from="Panel/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/CenterContainer2/InventoryCtrl" to="." method="_on_inventory_ctrl_item_mouse_entered"]
[connection signal="item_mouse_exited" from="Panel/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/CenterContainer2/InventoryCtrl" to="." method="_on_inventory_ctrl_item_mouse_exited"]
[connection signal="inventory_item_context_activated" from="Panel/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/CenterContainer/ShopCtrl" to="." method="_on_shop_ctrl_inventory_item_context_activated"]
[connection signal="item_mouse_entered" from="Panel/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/CenterContainer/ShopCtrl" to="." method="_on_shop_ctrl_item_mouse_entered"]
[connection signal="item_mouse_exited" from="Panel/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/CenterContainer/ShopCtrl" to="." method="_on_shop_ctrl_item_mouse_exited"]
[connection signal="item_added" from="InventoryDB" to="." method="_on_inventory_db_item_added"]
[connection signal="item_removed" from="InventoryDB" to="." method="_on_inventory_db_item_removed"]
[connection signal="item_added" from="ShopDB" to="." method="_on_shop_db_item_added"]
[connection signal="item_removed" from="ShopDB" to="." method="_on_shop_db_item_removed"]
